force-app/main/default/objects/ContactLog__c/ContactLog__c.object-meta.xml
<CustomObject>
    <label>Contact Log</label>
    <nameField>
        <label>Related Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>