force-app/main/default/objects/ContactLog__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>ContactLogs</relationshipName>
    <type>Lookup</type>
</CustomField>