force-app/main/default/objects/ContactLog__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>How a contact is associated with the record</description>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitter</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Team Facilitator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>